--- a/platforms/osx/com.tonyseek.rsocks.plist
+++ b/platforms/osx/com.tonyseek.rsocks.plist
@@ -6,17 +6,19 @@
     <string>com.tonyseek.rsocks</string>
     <key>ProgramArguments</key>
     <array>
-        <string>/path/to/bin/rsocks</string>
+        <string>/usr/local/bin/rsocks</string>
         <string>--config</string>
-        <string>/path/to/rsocks-config.toml</string>
+        <string>/usr/local/etc/rsocks/config.toml</string>
     </array>
-    <key>StandardOutPath</key>
-    <string>/Users/YOUR_NAME/Library/Logs/rsocks.log</string>
-    <key>StandardErrorPath</key>
-    <string>/Users/YOUR_NAME/Library/Logs/rsocks.errors.log</string>
     <key>KeepAlive</key>
     <true/>
     <key>RunAtLoad</key>
     <true/>
+    <!--
+    <key>StandardOutPath</key>
+    <string>/Users/YOUR_NAME/Library/Logs/rsocks.log</string>
+    <key>StandardErrorPath</key>
+    <string>/Users/YOUR_NAME/Library/Logs/rsocks.errors.log</string>
+    -->
 </dict>
 </plist>
